[package]
name = "payements-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
csv = "1.3.1"
dashmap = "6.1.0"
env_logger = "0.11.5"
log = "0.4.22"
rust_decimal = "1.35.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
